[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/player.gd" type="Script" id=1]
[ext_resource path="res://textures/player_red.png" type="Texture" id=2]
[ext_resource path="res://textures/player_fire.png" type="Texture" id=3]
[ext_resource path="res://textures/ice.png" type="Texture" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( -8, 8, 8, 8, 2, -8, -2, -8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Player" type="RigidBody2D" groups=[
"body",
"player",
"reset",
"wrap",
]]
collision_layer = 3
mass = 2.0
linear_damp = 3.0
angular_damp = 5.0
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Ship" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Flame" type="AnimatedSprite" parent="."]
modulate = Color( 1.15, 1.15, 1.15, 1 )
frames = SubResource( 5 )
offset = Vector2( 0, 8 )

[node name="Ice" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="BoostTimer" to="." method="on_boost_timer"]
[connection signal="timeout" from="FreezeTimer" to="." method="on_freeze_timer"]
